[package]
name = "filecoin-webapi"
version = "0.2.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_webapi"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "~1"
actix-web = { version = "^3", features = ["rustls"] }
actix-multipart = "*"
futures = "*"
futures-core = "*"
futures-util = "*"
log = "*"
env_logger = "*"
clap = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
mime = "*"
lazy_static = "*"
libc = "*"
bytes = "~0.5"
bellperson = { version = "0.14.1", default-features = false, features = ["gpu"] }

[build-dependencies]
rustls = "*"

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "8.0.1"
default-features = false

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-api/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-api/blst", "bellperson/blst"]

[patch.crates-io]
bellperson = { path = "../bellperson" }
